@@ -51,6 +51,7 @@ Current:
     - bug #43078: AVRDUDE crashes after sucessfully reading/writing eeprom
     - bug #43137: Writing and reading incorrect pages when using jtagicemkI
     - bug #40870: config nitpick: ATtiny25/45/85 have 1 calibration byte not 2
+    - bug #42908: no external reset at JTAGICE3
 
   * Internals:
     - Removing exit calls from config parser
